--- a/SolidsHoleOperationPresets/Views/ShellView.xaml
+++ b/SolidsHoleOperationPresets/Views/ShellView.xaml
@@ -7,6 +7,7 @@
              xmlns:prism="http://prismlibrary.com/"
              xmlns:dialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
              xmlns:mastercam="clr-namespace:Mastercam"
+             xmlns:viewModels="clr-namespace:SHOP.ViewModels"
              prism:ViewModelLocator.AutoWireViewModel="True"
              dialogs:DialogParticipation.Register ="{Binding}"
              WindowState="Normal"   
@@ -26,29 +27,98 @@
 
     <!--Set the Application ResourceDictionary-->
     <controls:MetroWindow.Resources>
-        <ResourceDictionary Source="../ShopResourceDictionary.xaml" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../ShopResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+
+
+
+
+            <!--<DataTemplate x:Key="Level3" DataType="{x:Type mastercam:Category}" >
+                <GroupBox Header="{Binding Name}" >
+                    <StackPanel>
+                        <ItemsControl x:Name="PresetsGrid" ItemsSource="{Binding Path=Presets, UpdateSourceTrigger=PropertyChanged}" >
+                            <Grid DataContext="{Binding}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+
+                                <TextBlock x:Name="presetName" Text="{Binding Name}" Grid.Column="0" />
+                                <controls:NumericUpDown x:Name="presetDiameter" Value="{Binding Diameter, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2"  HorizontalAlignment="Center"/>
+                                <controls:NumericUpDown x:Name="presetDepth" Value="{Binding Depth, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3"  HorizontalAlignment="Center" />
+                                <TextBlock x:Name="presetBottomAngle" Text="{Binding BottomAngle, UpdateSourceTrigger=PropertyChanged}" Grid.Column="4"  HorizontalAlignment="Center" />
+                                <TextBlock x:Name="presetSetDepthBy" Text="{Binding SetDepthBy, UpdateSourceTrigger=PropertyChanged}" Grid.Column="5"  HorizontalAlignment="Center" />
+                                <CheckBox x:Name="presetIsMetric" IsChecked="{Binding IsMetric, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Column="6" HorizontalAlignment="Center"/>
+                            </Grid>
+                        </ItemsControl>
+                    </StackPanel>
+                </GroupBox>
+            </DataTemplate>-->
+        </ResourceDictionary>
+
     </controls:MetroWindow.Resources>
 
-    <!--TODO HierarchicalDataTemplate-->
 
-    <Grid x:Name="MainGrid" >
+    <Grid>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="60" />
         </Grid.RowDefinitions>
 
-        <GroupBox Header="{Binding File, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="0">
-            <ListView x:Name="MetroDataGrid"                  
-                  Margin="5"
-                  VerticalAlignment="Stretch"
-                  HorizontalAlignment="Stretch"
-                  VirtualizingStackPanel.IsVirtualizing="true" 
-                  FocusManager.IsFocusScope="True"
-                  ItemsSource="{Binding Path=Categories, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
-                      
-                  >
-            </ListView>
+        <GroupBox Grid.Row="0" >
+
+            <ListBox Name="GroupView" 
+                     ItemsSource="{Binding Path=Categories.Category, UpdateSourceTrigger=PropertyChanged}"
+                     DataContext="{Binding }" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel DataContext="{Binding}" >
+                            <GroupBox Header="{Binding Path=Name }" >
+                                <ListBox ItemsSource="{Binding Path=Presets, UpdateSourceTrigger=PropertyChanged}" DataContext="{Binding }" >
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+
+                                            <Grid DataContext="{Binding}" >
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="*" />
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="*" />
+                                                </Grid.RowDefinitions>
+
+                                                <TextBlock x:Name="presetName" Text="{Binding Name}" Grid.Column="0" />
+                                                <controls:NumericUpDown x:Name="presetDiameter" Value="{Binding Diameter, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2"  HorizontalAlignment="Center"/>
+                                                <controls:NumericUpDown x:Name="presetDepth" Value="{Binding Depth, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3"  HorizontalAlignment="Center" />
+                                                <TextBlock x:Name="presetBottomAngle" Text="{Binding BottomAngle, UpdateSourceTrigger=PropertyChanged}" Grid.Column="4"  HorizontalAlignment="Center" />
+                                                <TextBlock x:Name="presetSetDepthBy" Text="{Binding SetDepthBy, UpdateSourceTrigger=PropertyChanged}" Grid.Column="5"  HorizontalAlignment="Center" />
+                                                <CheckBox x:Name="presetIsMetric" IsChecked="{Binding IsMetric, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Column="6" HorizontalAlignment="Center"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </GroupBox>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
         </GroupBox>
 
         <StackPanel x:Name="PanelButtons" 
