--- a/SolidsHoleOperationPresets/Views/ShellView.xaml
+++ b/SolidsHoleOperationPresets/Views/ShellView.xaml
@@ -32,53 +32,40 @@
                 <ResourceDictionary Source="../ShopResourceDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <!--<DataTemplate x:Key="PresetTemplate" DataType="{x:Type mastercam:Preset}" >
-                <Grid x:Name="PresetsGrid" DataContext="{Binding  }" >
+            <DataTemplate x:Key="PresetTemplate" DataType="{x:Type mastercam:Preset}" >
+                <Grid x:Name="PresetsGrid" >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200" />
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200"/>
                     </Grid.ColumnDefinitions>
-
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <TextBlock x:Name="presetName" Text="{Binding Name}" Grid.Column="0" />
-                    <controls:NumericUpDown x:Name="presetDiameter" Value="{Binding Diameter}" Grid.Column="2"  HorizontalAlignment="Center"/>
-                    <controls:NumericUpDown x:Name="presetDepth" Value="{Binding Depth}" Grid.Column="3"  HorizontalAlignment="Center" />
-                    <TextBlock x:Name="presetBottomAngle" Text="{Binding BottomAngle}" Grid.Column="4"  HorizontalAlignment="Center" />
-                    <TextBlock x:Name="presetSetDepthBy" Text="{Binding SetDepthBy}" Grid.Column="5"  HorizontalAlignment="Center" />
-                    <CheckBox x:Name="presetIsMetric" IsChecked="{Binding IsMetric, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Column="6" HorizontalAlignment="Center"/>
+                    <TextBlock x:Name="presetName" Text="{Binding Name}" Grid.Column="0" HorizontalAlignment="Left" />
+                    <controls:NumericUpDown x:Name="presetDiameter" Value="{Binding Diameter}" Grid.Column="2"  HorizontalAlignment="Left"/>
+                    <controls:NumericUpDown x:Name="presetDepth" Value="{Binding Depth}" Grid.Column="3"  HorizontalAlignment="Left" />
+                    <TextBlock x:Name="presetBottomAngle" Text="{Binding BottomAngle}" Grid.Column="4"  HorizontalAlignment="Left" />
+                    <TextBlock x:Name="presetSetDepthBy" Text="{Binding SetDepthBy}" Grid.Column="5"  HorizontalAlignment="Left" />
+                    <CheckBox x:Name="presetIsMetric" IsChecked="{Binding IsMetric, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Column="6" HorizontalAlignment="Left"/>
                 </Grid>
 
             </DataTemplate>
 
-            <HierarchicalDataTemplate x:Key="CategoryTemplate" 
-                                      DataType="{x:Type mastercam:Category}"
-                                      ItemsSource="{Binding Presets, UpdateSourceTrigger=PropertyChanged}"
-                                      ItemTemplate="{StaticResource PresetTemplate}"
+            <HierarchicalDataTemplate x:Key="ParentTemplate" DataType="{x:Type mastercam:Category}"                                       
+                                          ItemsSource="{Binding Presets, UpdateSourceTrigger=PropertyChanged}"
+                                          ItemTemplate="{StaticResource PresetTemplate}"
                                       >
-                <StackPanel x:Name="Panel" Orientation="Vertical" >
-                    <Label x:Name="categoryName" 
-                           Content="{Binding Name, UpdateSourceTrigger=PropertyChanged}" 
-                           Height="35" 
-                           BorderThickness="1" 
-                           BorderBrush="White" 
-                           Background="Crimson" 
-                           Foreground="White"/>
-
+                <StackPanel>
+                    <GroupBox Header="{Binding Name}" />
                 </StackPanel>
-            </HierarchicalDataTemplate>
 
-            <HierarchicalDataTemplate x:Key="ParentTemplate" DataType="{x:Type mastercam:Categories}"                                       
-                                          ItemsSource="{Binding Category, UpdateSourceTrigger=PropertyChanged}" 
-                                          ItemTemplate="{StaticResource CategoryTemplate}">
-            </HierarchicalDataTemplate>-->
+            </HierarchicalDataTemplate>
         </ResourceDictionary>
     </controls:MetroWindow.Resources>
 
@@ -91,48 +78,16 @@
 
         <GroupBox Grid.Row="0" Header="PRESETS" >
 
-            <ListBox 
-                ItemsSource="{Binding Path=Categories.Category}"
-                VirtualizingStackPanel.IsVirtualizing="true"  >
+            <TreeView x:Name="ProjectTreeview" 
+                      ItemsSource="{Binding Path=Categories.Category}"
+                      Margin="5" 
+                      MinHeight="150"
+                      BorderThickness="1"
+                      ItemTemplate="{StaticResource ParentTemplate}"                          
+                      VirtualizingStackPanel.IsVirtualizing="true" 
+                      FocusManager.IsFocusScope="True"
+                      />
 
-                <ListBox.ItemTemplate>
-                    <DataTemplate DataType="{x:Type mastercam:Category}">
-                        <GroupBox Header="{Binding Name}" >
-                            <StackPanel Orientation="Horizontal">
-                                <ListBox 
-                                    ItemsSource="{Binding Presets}" 
-                                    VirtualizingStackPanel.IsVirtualizing="true" >
-
-                                    <ListBox.ItemTemplate>
-                                        <DataTemplate DataType="{x:Type mastercam:Preset}">
-
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="175"/>
-                                                    <ColumnDefinition Width="175" />
-                                                    <ColumnDefinition Width="175"/>
-                                                    <ColumnDefinition Width="175"/>
-                                                    <ColumnDefinition Width="175"/>
-                                                    <ColumnDefinition Width="175"/>
-                                                    <ColumnDefinition Width="175"/>
-                                                </Grid.ColumnDefinitions>
-
-                                                <TextBlock x:Name="presetName" Text="{Binding Name}" Grid.Column="0" />
-                                                <controls:NumericUpDown x:Name="presetDiameter" Value="{Binding Diameter, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2"  HorizontalAlignment="Center"/>
-                                                <controls:NumericUpDown x:Name="presetDepth" Value="{Binding Depth, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3"  HorizontalAlignment="Center" />
-                                                <TextBlock x:Name="presetBottomAngle" Text="{Binding BottomAngle, UpdateSourceTrigger=PropertyChanged}" Grid.Column="4"  HorizontalAlignment="Center" />
-                                                <TextBlock x:Name="presetSetDepthBy" Text="{Binding SetDepthBy, UpdateSourceTrigger=PropertyChanged}" Grid.Column="5"  HorizontalAlignment="Center" />
-                                                <CheckBox x:Name="presetIsMetric" IsChecked="{Binding IsMetric, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Column="6" HorizontalAlignment="Center"/>
-                                            </Grid>
-
-                                        </DataTemplate>
-                                    </ListBox.ItemTemplate>
-                                </ListBox>
-                            </StackPanel>
-                        </GroupBox>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
         </GroupBox>
 
         <StackPanel x:Name="PanelButtons" 
